Using release version

--- a/README.adoc
+++ b/README.adoc
@@ -21,7 +21,7 @@ Add dependency and repository to your pom file
 <dependency>
     <groupId>com.github.lukasz-kusek</groupId>
     <artifactId>assertj-xml</artifactId>
-    <version>-SNAPSHOT</version>
+    <version>0.0.1</version>
 </dependency>
 
 [source,xml]
